--- a/trunk/TODO
+++ b/trunk/TODO
@@ -21,37 +21,32 @@
 
 * v12.0.1:
 ** schedule 
-Feb.: freeze, testing
+Feb.: freeze, documentation, testing
 Mar.: preparations (planned Emacs 23.2 release)
 Apr.: release, presentation
 
 ** workload
 *** bugs
-- "string" commands are not fontified behind $
+- completion capitalises A, al to allsel is not working
 
 - -skeleton-overlay bug resurfaced
 
-- C-c ?: *dim not found in keyword list
-
-- argument and -next-code-line for -send-above, check when
-  -next-code-line hits the eob!  Is this an error?
-
-- provide package with compiled code, what happens when some .el file
-  is changed, load or load-file, what happens with compilation and
-  autoload?
-
-- Highlighting: % and & operators in comments
-   update -font-lock-keywords-2
-
-- ansys-last-skeleton is not used   
+- update -font-lock-keywords-2
 *** additional features?
 - insert skeleton with C-c C-s i, send line C-c C-c ccc
 *** miscellaneous
 - update, restructure -mode-help, section for code compilation?
 
+- checkdoc
+
+- .elc, what happens when some .el file is changed, load or load-file, what
+  happens with compilation and autoload?
+
 - move customisation group ansys-process to -process.el?
 
 - last-command-char is obsolete
+
+- old-style backquotes -skeleton.el
 
 - TODOs, FIXMEs in the code
 
@@ -59,6 +54,8 @@ Apr.: release, presentation
    "Ansys_undocumented_commands") are still working in v12
 
 - C-c C-c copy whole line (line with line-break or not)?
+
+- variable ansys-last-skeleton is not used   
 
 ** general release procedures
 
@@ -141,6 +138,7 @@ below you'll find a list of its features and what's new.
    $ needs space(s)?
    ansys completion and emacs expansion C-c ] -- -close-block
    default (,) commands but most */ can't be "*repeated"
+   M-w (copies line)
    colon loop: e.g.: lfillt,(1:3),(2:4),Rad, lesize,(1:5:2),Esize
    _return & _status values
    preview insert skeletons (alternatively abbrev mode?)
