--- a/trunk/TODO
+++ b/trunk/TODO
@@ -12,6 +12,7 @@
 ** Highlighting: A label :LABEL may appear behind the /input command
    and is not highlighted as label
 
+** Highlighting: An apostrophy clashes with the Ansys "char" specifier
 ** Keybinding: M-Tab is captured under Windows and some Linux desktops
    Workaround: Press instead of M-Tab (ALT + TAB) the ESC key and then
    the Tab key (ESC, TAB) or apply the command from the menu bar
@@ -35,41 +36,14 @@
 2011-11 November: Users' meeting http://www.usersmeeting.com/
 ** workload
 *** bugs
-- command "mpplot" is not fontified correctly
-  though "mpplo"
-
-- /title fontifitcation is not right
-
-- Help:
+- Help, M-? does not :
  *mwrite
- *sread
+ *sread M-? shows help for *mwrite
 
 - -if-then does not indent correctly
 
 - ansys-template.el:85:13:Warning: reference to free variable
     `ansys-skeleton-overlay'
-
-- Alignment: Alignment of variables works only reliably for
-   the setting of real constants
-
-- Alignment: alignment "section" is not clear in -align
-
-- Alignment: there must be at least one space between = and variable/value
-
-x	=	0.4	    !laskd
-y	=      33.0	    ! alskdl
-xzv	= 9999990.3	    !
-llk	=	0.333333333 !bla
-al_	=      00.40
-aslföas =     304
-i	=	4.	    !as
-ka	= .4		    !salkd
-kasd	=	3./0.4
-xxx	= asin(3.0)
-
-- extend alignment to vector definitions
-  t(1,0) = 20,300,3094,
-  t(1,1) =  3,  4,   9,
 
 - mismatch in customisation buffer of -license-file and -ansysli-servers
 
@@ -127,6 +101,8 @@ xxx	= asin(3.0)
 
 ** Ansys process and interpreter buffer
    example: gnuplot-mode
+
+- create an option for the number of processors for  -start-ansys (/config,nproc is obsolete)
 
 - dbus support of workbench or integrating emacs in workbench?
 
@@ -213,6 +189,28 @@ xxx	= asin(3.0)
   must *go:label be unambiguous?
 
 ** Miscellaneous
+- Alignment: Alignment of variables works only reliably for
+   the setting of real constants
+
+- Alignment: alignment "section" is not clearly defined in function -align
+
+- Alignment: there must be at least one space between = and variable/value
+
+x	=	0.4	    !laskd
+y	=      33.0	    ! alskdl
+xzv	= 9999990.3	    !
+llk	=	0.333333333 !bla
+al_	=      00.40
+aslföas =     304
+i	=	4.	    !as
+ka	= .4		    !salkd
+kasd	=	3./0.4
+xxx	= asin(3.0)
+
+- extend alignment to vector definitions
+  t(1,0) = 20,300,3094,
+  t(1,1) =  3,  4,   9,
+
 - Utility for clearing files like .rst, ... or using dired?
 
 - E23.2 mouse-choose-completion obsolete
@@ -358,11 +356,6 @@ xxx	= asin(3.0)
 
 ** additional macro resources
 see www.apdl.de for further ideas and extensions
-
-
-# local variables:
-# mode: outline
-# end:
 * Procedures
 
 - Mode Help: keyboard input quoting is "", emphasizing '', keys <>
@@ -428,3 +421,7 @@ the Editor for your APDL .mac files.
 
 Below you'll find a summary of its features and what's new in this
 release.
+
+# local variables:
+# mode: outline
+# end:
